// Copyright (c) 2025 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v30;

import "scalapb/scalapb.proto";

message DynamicSequencingParameters {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.AlphaProtoVersion";

  // Sequencing dynamic synchronizer parameters can only be interpreted by a sequencer implementation
  //  and are opaque to the rest of the synchronizer.
  bytes payload = 1;
}
